Migrate Netcdf writing to the new declaration language.
Refs #113677